sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: value f is not a member of Unit
possible cause: maybe a semicolon is missing before `value f'?
	   } f=f-1
             ^AlgCocktailSort2:18: error: value d is not a member of Unit
possible cause: maybe a semicolon is missing before `value d'?
 } d=d+1	
   ^